# testabilidade-elevador

./: .gitignore  CMakeLists.txt  README.md
lib/: andar.h  cabine.h  componentes.h  elevador.h  excecoes.h
src/: andar.cpp  cabine.cpp  componentes.cpp  elevador.cpp
test/: CMakeLists.txt  cabine_test.cpp  componentes_test.cpp  elevador_test.cpp  restricoes_test.cpp
